L10N Quarantine - i18n fixes and finalize
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@17507 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mail-casing/servlets/quarantine/po/ro/ung_mail_casing.po
+++ b/mail-casing/servlets/quarantine/po/ro/ung_mail_casing.po
@@ -195,8 +195,8 @@ msgid "Deleted %d addresses"
 msgstr ""
 
 #: ../root/inbox.jspx:13
-msgid "Quarantine Digest for: {0}"
-msgstr "Quarantine Digest pentru: {0}"
+msgid "Quarantine Digest for:"
+msgstr "Quarantine Digest pentru:"
 
 #: ../root/inbox.jspx:19
 msgid "{0} | Quarantine Digest for: {1}"
