--- a/shield/po/ung_shield.pot
+++ b/shield/po/ung_shield.pot
@@ -2,19 +2,19 @@
 # Copyright (C) YEAR Untangle, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2008-07-18 15:47+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"POT-Creation-Date: 2008-07-18 12:57+0300\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"MIME-Version: 1.0\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=0; null;\n"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:22
@@ -39,8 +39,9 @@ msgid "Note"
 msgstr ""
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:46
-msgid "Attack Blocker is a heuristic based intrusion prevention and requires no"
-"configuration. Users can modify the treatment of certain IP and/or networks"
+msgid ""
+"Attack Blocker is a heuristic based intrusion prevention and requires no "
+"configuration. Users can modify the treatment of certain IP and/or networks "
 "on the exception tab."
 msgstr ""
 
@@ -137,4 +138,3 @@ msgstr ""
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:275
 msgid "Failed"
 msgstr ""
-
