--- a/spamassassin/po/ro/ung_spamassassin.po
+++ b/spamassassin/po/ro/ung_spamassassin.po
@@ -2,18 +2,18 @@
 # Copyright (C) YEAR Untangle, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "POT-Creation-Date: 2008-07-18 08:34+0300\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"MIME-Version: 1.0\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=0; null;\n"
 
@@ -64,10 +64,13 @@ msgstr ""
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:223
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:312
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:520
-msgid "Strength Value must be a number in range 100-30. Smaller value is higher"
+#, fuzzy
+msgid ""
+"Strength Value must be a number in range 100-30. Smaller value is higher "
 "strength."
-msgstr "Valoarea puterii trebuie să fie un număr in intervalul 100-30. O valoare"
-"maimica înseamnă putere mai mare"
+msgstr ""
+"Valoarea puterii trebuie să fie un număr in intervalul 100-30. O "
+"valoaremaimica înseamnă putere mai mare"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:62
 msgid "Email"
@@ -212,4 +215,3 @@ msgstr ""
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:532
 msgid "Please wait"
 msgstr ""
-
