Rename modules to have the same name as the Debian package & extract new keys - in progress
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18551 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/po/ro/untangle-webui-systemInfo.po
+++ b/uvm-lib/servlets/webui/po/ro/untangle-webui-systemInfo.po
@@ -1,14 +1,13 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Untangle, Inc.
+# Copyright (C) 2008 Untangle, Inc.
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# FIRST AUTHOR <cmatei@untangle.com>, 2008.
 # 
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-07-21 16:03+0300\n"
+"POT-Creation-Date: 2008-08-28 18:29+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -92,8 +91,7 @@ msgid "Email"
 msgstr ""
 
 #: ../root/script/config/systemInfo.js:177
-#, python-format
-msgid "Number of computers%sprotected by Untangle"
+msgid "Number of computers{0}protected by Untangle"
 msgstr ""
 
 #: ../root/script/config/systemInfo.js:194
