--- a/uvm-lib/po/ro/untangle-libuvm.po
+++ b/uvm-lib/po/ro/untangle-libuvm.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-05 12:30+0300\n"
+"POT-Creation-Date: 2008-09-08 18:29+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -821,7 +821,7 @@ msgid "{0} Previous"
 msgstr ""
 
 #: ../../../pkgs/untangle-apache2-config/files/var/www/script/wizard.js:39
-msgid "{Next {0}"
+msgid "Next {0}"
 msgstr ""
 
 #: ../../../pkgs/untangle-apache2-config/files/var/www/script/wizard.js:220
