--- a/openvpn/po/ro/untangle-node-openvpn.po
+++ b/openvpn/po/ro/untangle-node-openvpn.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-07 16:40+0200\n"
+"POT-Creation-Date: 2008-11-10 11:22-0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -689,7 +689,7 @@ msgid "All Sessions"
 msgstr ""
 
 #: ../impl/com/untangle/node/openvpn/VpnNodeImpl.java:128
-msgid "Block Connection"
+msgid "Clients blocked"
 msgstr ""
 
 #: ../impl/com/untangle/node/openvpn/VpnNodeImpl.java:128
@@ -697,7 +697,7 @@ msgid "BLOCK"
 msgstr ""
 
 #: ../impl/com/untangle/node/openvpn/VpnNodeImpl.java:129
-msgid "Pass Connection"
+msgid "Clients passed"
 msgstr ""
 
 #: ../impl/com/untangle/node/openvpn/VpnNodeImpl.java:129
@@ -705,7 +705,7 @@ msgid "PASS"
 msgstr ""
 
 #: ../impl/com/untangle/node/openvpn/VpnNodeImpl.java:130
-msgid "Connect"
+msgid "Clients connected"
 msgstr ""
 
 #: ../impl/com/untangle/node/openvpn/VpnNodeImpl.java:130
