--- a/protofilter/po/untangle-node-protofilter.pot
+++ b/protofilter/po/untangle-node-protofilter.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-07 16:46+0200\n"
+"POT-Creation-Date: 2008-11-10 11:22-0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -138,7 +138,7 @@ msgid "Blocked Protocol Events"
 msgstr ""
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:90
-msgid "Scan Protocol"
+msgid "Sessions scanned"
 msgstr ""
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:90
@@ -146,7 +146,7 @@ msgid "SCAN"
 msgstr ""
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:91
-msgid "Block Protocol"
+msgid "Sessions blocked"
 msgstr ""
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:91
@@ -154,7 +154,7 @@ msgid "BLOCK"
 msgstr ""
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:92
-msgid "Detect Protocol"
+msgid "Sessions logged"
 msgstr ""
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:92
