--- a/spamassassin/po/untangle-node-spamassassin.pot
+++ b/spamassassin/po/untangle-node-spamassassin.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-07 16:56+0200\n"
+"POT-Creation-Date: 2008-11-10 11:22-0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -222,7 +222,7 @@ msgid "Skipped Events"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:155
-msgid "Pass Message"
+msgid "Messages passed"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:155
@@ -230,7 +230,7 @@ msgid "PASS"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:156
-msgid "Block Message"
+msgid "Messages blocked"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:156
@@ -238,7 +238,7 @@ msgid "BLOCK"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:157
-msgid "Mark Message"
+msgid "Messages marked"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:157
@@ -246,7 +246,7 @@ msgid "MARK"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:158
-msgid "Quarantine Message"
+msgid "Messages quarantined"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:158
@@ -254,11 +254,11 @@ msgid "QUARANTINE"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:159
-msgid "Spam Detected"
+msgid "Spam detected"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamImpl.java:160
-msgid "Email Received"
+msgid "Messages received"
 msgstr ""
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamLogFilter.java:27
